1.1.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
	
- Fixed bug #8835: Documentation of lOr and lAnd.

	
1.1.1 - Monday 07 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8360: ezcQueryExpressionOracle::concat() calls non-existing
  method.
- Added ezcQuery::resetBinds() which allows you to reset the bound values and
  parameters associated with a query.


1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8428: LIMIT doesn't work correctly, inverted values.


1.1rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added examples of using multi-join and subselect syntax to the tutorial.


1.1beta2 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed problem where rollback would not be performed even though it was the
  innermost call to it.


1.1beta1 - Wednesday 19 April 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Improved support for SQLite right join emulation.

ezcQuery
========
- Added support for subselects.
- Added support for multi-join queries.
- Changed the requirement that select(), from(), where() and the join methods
  could only be used once for a query object.


1.0.1 - Monday 20 February 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #7764: ezcQuerySelect doesn't reset queries correctly	


1.0 - Monday 30 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Removed ezcDbHandler::begin(). It was a rename of PDO::beginTransaction()
  because of the strange PDO naming. Unfortunately it caused problems with
  re-implementations.
- Removed ezcDbHandler::processLimitOffset. Leftover from old design.


1.0rc1 - Monday 16 January 2006