@@ -1,3 +1,5 @@
+- Fixed handling queries like "SELECT 1+1" in Oracle.
+
 1.1.2 - Monday 28 August 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 	
